# aya-example

./: Cargo.toml  README.md
.vim/: coc-settings.json
file_open_core/: Cargo.toml
file_open_core-common/: Cargo.toml
file_open_core-ebpf/: Cargo.toml  build.rs
file_open_core-ebpf/.cargo/: config.toml
file_open_core-ebpf/src/: access.rs  main.rs
file_open_core-ebpf/src/shim/: access.c
file_open_core/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
